<resources>
    <string name="app_name">Ghabbour shop floor</string>
    <string name="enter_pass">Please enter password</string>
    <string name="signin_text">Sign in</string>
    <string name="enter_usrname">Please enter username</string>
    <string name="main_schedule_list">Main Schedule List</string>
    <string name="job_order_number">Job order number</string>
    <string name="sequence">Sequence</string>
    <string name="machine_loading">Machine Loading</string>
    <string name="child_card">Child card</string>
    <string name="job_order_number_txt">Job order Name :</string>
    <string name="child_code">Child Code : </string>
    <string name="job_orderqtn">Job order Qty :</string>
    <string name="machine_code">Machine Code</string>
    <string name="die_code">Die Code</string>
    <string name="loadingqtn">Loading Qty</string>
    <string name="child_qtn">Child Qty : </string>
    <string name="operation_txt">Operation : </string>
    <string name="save">Save</string>
    <string name="add_workers">Add workers</string>
    <string name="production_scrap"> Create Rejection request</string>
    <string name="basket_qtn">Basket Qty :</string>
    <string name="production_sign_off">Production Sign off</string>
    <string name="child">Child :  </string>
    <string name="basket_qtn_edt">Basket Qty</string>
    <string name="production_set_qtn">Production set Qtn</string>
    <string name="repair_orders">Repair Orders</string>
    <string name="number_of_defects">Number of Defects</string>
    <string name="basket_code">Basket Code</string>
    <string name="operation">Operation</string>
    <string name="notes">Notes</string>
    <string name="scrap">Rejection</string>
    <string name="quantity_ok">Quantity OK</string>
    <string name="defect_qtns">Defect Qty :</string>
    <string name="job_order_name">Job Order Name :</string>
    <string name="scrap_qtn">Rejection Qty</string>
    <string name="job_order_name_txt">Job order Name</string>
    <string name="scrap_qtn_txt">Rejection Qty : </string>
    <string name="responsible_dep">Responsible Dep :</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="quality_scrap_approval">Quality Rejection approval</string>
    <string name="production_scrap_approval">Production Rejection approval</string>
    <string name="rejection_request_list">Rejection request List</string>
    <string name="add_defects">Add Defects</string>
    <string name="child_txt">Child : </string>
    <string name="dep">Dep : </string>
    <string name="stauts_code">Stauts Code</string>
    <string name="parent">Parent :</string>
    <string name="loading_qty">Loading Qty :</string>
    <string name="sign_off">Sign off</string>
    <string name="station">Station Code</string>
    <string name="basket">Basket</string>
    <string name="quantity">Quantity</string>
    <string name="loading_qtn">Loading Qty</string>
    <string name="qc_decision">Qc Decision</string>
    <string name="defect_name">Defect Name</string>
    <string name="qc_notes">Qc Notes</string>
    <string name="production_notes">Production Notes</string>
    <string name="production_repair">Production repair</string>
    <string name="main_menu">Main Menu</string>
    <string name="quality">Quality</string>
    <string name="production">Production</string>
    <string name="planning">Planning</string>
    <string name="engineering">Engineering</string>
    <string name="production_menu">Production Menu</string>
    <string name="manfacturing">Manfacturing</string>
    <string name="welding">Welding</string>
    <string name="paint">Paint</string>
    <string name="welding_menu">Welding Menu</string>
    <string name="machine_sign_off">Machine Sign off</string>
    <string name="scrap_request">Rejection request</string>
    <string name="quality_scrap_request">Assigned Rejection request</string>
    <string name="basket_transfer">Basket Transfer</string>
    <string name="quality_welding">Welding Quality</string>
    <string name="add_defect">Add Defect</string>
    <string name="quality_repair">Quality repair</string>
    <string name="quality_desicion">Quality Desicion</string>
    <string name="production_scrap_request">Production Rejection request</string>
    <string name="paint_menu">Paint Menu</string>
    <string name="paint_quality">Paint Quality</string>
    <string name="manfacturing_menu">Manfacturing Menu</string>
    <string name="manfacturing_quality">Manfacturing Quality</string>
    <string name="add_downtime">Add Downtime</string>
    <string name="close_downtime">Close Downtime</string>
    <string name="plan_staus">Plan staus</string>
    <string name="basket_to">Basket to</string>
    <string name="defected_qty">Defected Qty :</string>
    <string name="code">Code</string>
    <string name="defect_list">Defect List</string>
    <string name="back">Back</string>
    <string name="quality_operation_name">Qc Name :</string>
    <string name="item_code">Item Code</string>
    <string name="inspection_machine_code">Inspection Machine code</string>
    <string name="qty">Qty</string>
    <string name="qty_txt">Qty :</string>
    <string name="parent_txt">Parent</string>
    <string name="parentcode_txt">MFGPF1132020A2W</string>
    <string name="parentdes_txt">Center Stand Assembly</string>
    <string name="childcode_txt">MFGPF1132021M2W</string>
    <string name="childdesc_txt">Main Pipe RH Machinery </string>
    <string name="station_loading">Station Loading</string>
    <string name="station_sign_off">Station sign off</string>
    <string name="operation_display">Welding 1</string>
    <string name="qc_gate1">Qc gate1</string>
    <string name="paint_station_loading">Paint Station loading</string>
    <string name="paint_sign_off">Paint Sign off</string>
    <string name="color_verification">Color verification</string>
    <string name="color_validation">Color validation</string>
    <string name="item_component">Item Component</string>
    <string name="paint_sequence">Paint Sequence</string>
    <string name="basket_qty">Basket Qty</string>
    <string name="qc_operation_1">Qc operation 1</string>
    <string name="sequence_num">Seq #</string>
    <string name="po_qty">Po Qty</string>
    <string name="status">Status</string>
    <string name="basket_code_txt">Basket Code :</string>
    <string name="sign_off_qty">Sign off Qty</string>
    <string name="defect_qty">Defect Qty</string>
    <string name="repaired_qty">Repaired Qty</string>
    <string name="approved_qty">Approved Qty</string>
    <string name="sample_qty">Sample Qty</string>
    <string name="close">Close</string>
    <string name="defect_name_txt">Defect Name :</string>
    <string name="responsible">Responsible</string>
    <string name="create_scrap">Create Rejection</string>
    <string name="existing_defects">Existing Defects</string>
    <string name="new_defects">New Defects</string>
    <string name="display_defects">Display Defects</string>
    <string name="first_loading">First Loading</string>
    <string name="mchinesignoff">Mchine Signoff</string>
    <string name="machine_hold">Machine hold</string>
    <string name="signoff_items">Signoff Items</string>
    <string name="machine_wip">Machine WIP</string>
    <string name="new_request">New request</string>
    <string name="uservalidationerror">Please enter User name</string>
    <string name="passwordvalidationerror">please Enter password</string>
    <string name="quality_operation">Quality Operation</string>
    <string name="without_defect">Without Defect</string>
    <string name="defects_details">Defects Details</string>
    <string name="total_defected_qty">Total Defected Qty</string>
    <string name="add_defects_details">Add Defects Details</string>
    <string name="defects_select_list">Defects Select List</string>
    <string name="add">Add</string>
    <string name="add_repair">Add repair</string>
    <string name="repair_qty">Repair Qty</string>
    <string name="rejected_qtn_txt">Rejected Qty</string>
    <string name="rejection_request">Rejection Request</string>
    <string name="random_quality_inspection">Random Quality Inspection</string>
    <string name="job_order_qty">Job Order Qty</string>
    <string name="rejected_qty">Rejected Qty</string>
    <string name="create_rejection_request">Create Rejection Request</string>
    <string name="machine_wip_txt">Machine Wip</string>
    <string name="welding_wip">Welding Wip</string>
    <string name="new_sample">New Sample</string>
    <string name="approved_quantity">Approved Quantity</string>
    <string name="check_list">Check List</string>
    <string name="welding_quality">Welding Quality</string>
    <string name="welding_quality_operation">Welding Quality Operation</string>
    <string name="counting">Counting</string>
    <string name="barcode">Barcode</string>
    <string name="paint_qty">Paint Qty</string>
    <string name="parent_quantity">Parent Quantity</string>
    <string name="check_your_connection">Check your connection!</string>
    <string name="old_basket_code">Old Basket Code</string>
    <string name="new_basket_code">New Basket Code</string>
    <string name="reason_defects">Reason Defects</string>
    <string name="ppr_remaining_qty">Ppr Remaining Qty</string>
    <string name="job_order">Job Order</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="machine_name">Machine name:</string>
    <string name="die_name">Die name:</string>
    <string name="quality_ok">Quality OK</string>
    <string name="quality_pass">Quality pass</string>
    <string name="full_inspection">Full inspection</string>
    <string name="child_qty">Child Qty</string>
    <string name="defects">Defects</string>
    <string name="ok_baskets">OK baskets</string>
    <string name="items_receiving">Items Receiving</string>
    <string name="error_in_getting_data">Error in getting data!</string>
    <string name="close_request">Close request</string>
    <string name="closed_successfully">Closed Successfully</string>
    <string name="build_date" translatable="false">23 Nov. 2022</string>
    <string name="defected_basket">Defected basket</string>
    <string name="rejected_basket">Rejected basket</string>
    <string name="basket_info">Basket Info</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="committee_decision">Committee decision</string>
    <string name="reason">Reason</string>
    <string name="responsible_department">Responsible department</string>
    <string name="ok_qty">Ok qty</string>
    <string name="repairable_qty">Repairable qty</string>
    <string name="add_worker">Add worker</string>
    <string name="worker_name">Worker Name</string>
    <string name="settings">Settings</string>
    <string name="new_ip">New Ip</string>
    <string name="please_enter_only_ip_without">Please enter only ip without http:// or folder name</string>
    <string name="continue_loading">Continue Loading</string>
    <string name="handling">Handling</string>
    <string name="paint_sign_off_qty">Paint sign off qty</string>
    <string name="handling_qty">Handling Qty</string>
    <string name="sign_in_time">Sign in time</string>
    <string name="expected_sign_out_time">Expected sign out time</string>
    <string name="remaining_time">Remaining time</string>
    <string name="paint_wip">Paint Wip</string>
    <string name="approval_rejection_request">Approval Rejection Request</string>
    <string name="manufacturing_counting">Manufacturing counting</string>
    <string name="welding_counting">Welding counting</string>
    <string name="warehouse_counting">Warehouse counting</string>
</resources>