<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Paint.PaintMenuFragment"
    android:background="@drawable/background"
    >
    <TextView
        android:id="@+id/paintmenu_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        style="@style/styleoftextinappbar"
        android:text="@string/paint_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paintmenu_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/machineloading_btn"
                style="@style/MenuButton"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/paint_station_loading"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_workers"
                style="@style/MenuButton"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/add_workers"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machineloading_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/paint_sign_off"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/paint_sign_off"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_workers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/paintwip_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/paint_wip"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paint_sign_off" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/colorverification_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/color_verification"
                android:visibility="gone"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paintwip_btn" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/productionrepair_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/production_repair"
                android:visibility="visible"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/colorverification_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rejection_request_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/rejection_request"
                app:cornerRadius="25dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productionrepair_btn" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/approval_rejection_request"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/approval_rejection_request"
                android:visibility="visible"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rejection_request_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>