<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Manfacturing.ManfacturingmenuFragment"
    android:background="@drawable/background"
    >
    <TextView
        android:id="@+id/manfacturing_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        style="@style/styleoftextinappbar"
        android:text="@string/manfacturing_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manfacturing_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/machineloading_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/machine_loading"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_worker"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/add_workers"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machineloading_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/machinesignoff_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/machine_sign_off"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_worker" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/plansequencehold_btn"
                style="@style/MenuButton"
                app:layout_constraintTop_toBottomOf="@id/machinesignoff_btn"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/appbarcolor"
                app:cornerRadius="25dp"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rejection_requests_list"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:visibility="gone"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/rejection_request_list"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plansequencehold_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rejection_request_list"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/quality_scrap_request"
                android:visibility="visible"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rejection_requests_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/counting"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/counting"
                android:visibility="visible"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basket_info_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productionrepair_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/production_repair"
                android:visibility="visible"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/counting" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/approval_rejection_request"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/rejection_request_list"
                android:visibility="gone"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productionrepair_btn" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/machinewip_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/machine_wip"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rejection_request_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/basket_info_btn"
                style="@style/MenuButton"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/appbarcolor"
                android:text="@string/basket_info"
                app:cornerRadius="25dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machinewip_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>