<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productionscraplstwe_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="143dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="15dp"
    android:backgroundTint="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/jobordernum_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/job_order_name_txt"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            style="@style/styleoftextbold"
            />
        <TextView
            android:id="@+id/jobordername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/jobordernum_txt"
            app:layout_constraintStart_toStartOf="@id/jobordernum_txt"
            app:layout_constraintEnd_toEndOf="@id/jobordernum_txt"
            android:layout_marginTop="5dp"
            android:text="151516"
            style="@style/styleoftext"
            />
        <TextView
            android:id="@+id/operation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/operation"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            style="@style/styleoftextbold"
            />
        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/operation_txt"
            app:layout_constraintStart_toStartOf="@id/operation_txt"
            app:layout_constraintEnd_toEndOf="@id/operation_txt"
            android:layout_marginTop="5dp"
            android:text="@string/operation_display"
            style="@style/styleoftext"
            />
        <TextView
            android:id="@+id/scrapqtn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/jobordername"
            app:layout_constraintStart_toStartOf="@id/jobordernum_txt"
            android:text="@string/scrap_qtn_txt"
            android:layout_marginTop="15dp"
            style="@style/styleoftextbold"
            />
        <TextView
            android:id="@+id/scrapqtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/scrapqtn_txt"
            app:layout_constraintStart_toEndOf="@id/scrapqtn_txt"
            android:text="15"
            android:layout_marginTop="2dp"
            style="@style/styleoftext"
            />


        <TextView
            android:id="@+id/dep_txt"
            style="@style/styleoftextbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:text="@string/dep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobordername" />
        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/dep_txt"
            app:layout_constraintStart_toEndOf="@id/dep_txt"
            android:text="@string/production"
            android:layout_marginTop="2dp"
            style="@style/styleoftext"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
