<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Handling.HandlingMainMenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/warehouse_counting"
        style="@style/styleoftextinbtn"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/appbarcolor"
        android:text="@string/warehouse_counting"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manufacturing_counting"
        style="@style/styleoftextinbtn"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/appbarcolor"
        android:text="@string/manufacturing_counting"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/warehouse_counting"
        app:layout_constraintStart_toStartOf="@+id/warehouse_counting"
        app:layout_constraintTop_toBottomOf="@+id/warehouse_counting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welding_counting"
        style="@style/styleoftextinbtn"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/appbarcolor"
        android:text="@string/welding_counting"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/warehouse_counting"
        app:layout_constraintStart_toStartOf="@+id/warehouse_counting"
        app:layout_constraintTop_toBottomOf="@+id/manufacturing_counting" />

</androidx.constraintlayout.widget.ConstraintLayout>